include/playbox/pb_fb.h

typedef struct {
    int w;
    int h;
    pb_cell* cells;
    /* Camera: world (x,y) maps to screen (x - cam_x, y - cam_y). */
    int cam_x;
    int cam_y;
    /* Scissor in screen-space cells [x0,x1) x [y0,y1). */
    int clip_x0;
    int clip_y0;
    int clip_x1;
    int clip_y1;
} pb_fb;