include/playbox/pb_app.h

typedef struct pb_app pb_app;
typedef void (*pb_on_init_fn)(pb_app* app, void* user);
typedef void (*pb_on_event_fn)(pb_app* app, void* user, const pb_event* ev);
typedef void (*pb_on_update_fn)(pb_app* app, void* user, double dt);
typedef void (*pb_on_draw_fn)(pb_app* app, void* user, pb_fb* fb);
typedef void (*pb_on_shutdown_fn)(pb_app* app, void* user);
typedef struct {
    const char* title;
    int target_fps;
    uint32_t flags;
    pb_cell clear;
    pb_on_init_fn on_init;
    pb_on_event_fn on_event;
    pb_on_update_fn on_update;
    pb_on_draw_fn on_draw;
    pb_on_shutdown_fn on_shutdown;
} pb_app_desc;
PB_API pb_app* pb_app_create(const pb_app_desc* desc, void* user);
PB_API void pb_app_destroy(pb_app* app);
PB_API int pb_app_run(pb_app* app);
PB_API void pb_app_quit(pb_app* app);
PB_API void pb_app_request_resize(pb_app* app);
PB_API int pb_app_width(const pb_app* app);
PB_API int pb_app_height(const pb_app* app);
PB_API void pb_app_set_title(pb_app* app, const char* title);
PB_API void pb_app_set_clear(pb_app* app, pb_cell clear);
PB_API void pb_app_set_target_fps(pb_app* app, int fps);
PB_API int pb_app_is_replay(const pb_app* app);
PB_API int pb_app_is_recording(const pb_app* app);
PB_API uint32_t pb_app_replay_seed(const pb_app* app);
PB_API int pb_app_replay_initial_size(const pb_app* app, int* out_w, int* out_h);