bindings/rust/playbox-sys/src/lib.rs


    /* braille */
    pub fn pb_fb_braille_clear(fb: *mut pb_fb, bg: pb_color);
    pub fn pb_fb_braille_plot(fb: *mut pb_fb, px: c_int, py: c_int, color: pb_color);
    pub fn pb_fb_braille_plot_blend(
        fb: *mut pb_fb,
        px: c_int,
        py: c_int,
        color: pb_color,
        alpha: c_float,
    );
    pub fn pb_fb_braille_line(
        fb: *mut pb_fb,
        x0: c_int,
        y0: c_int,
        x1: c_int,
        y1: c_int,
        color: pb_color,
    );
    pub fn pb_fb_braille_fill_rect(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        color: pb_color,
    );
    pub fn pb_fb_braille_fill_circle(
        fb: *mut pb_fb,
        cx: c_int,
        cy: c_int,
        radius: c_int,
        color: pb_color,
    );
    pub fn pb_fb_braille_circle(
        fb: *mut pb_fb,
        cx: c_int,
        cy: c_int,
        radius: c_int,
        color: pb_color,
    );

    /* quadrant */
    pub fn pb_fb_quad_plot(fb: *mut pb_fb, px: c_int, py: c_int, color: pb_color);
    pub fn pb_fb_quad_fill_rect(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        color: pb_color,
    );
    pub fn pb_fb_quad_fill_circle(
        fb: *mut pb_fb,
        cx: c_int,
        cy: c_int,
        radius: c_int,
        color: pb_color,
    );

    /* full-block / shade */
    pub fn pb_fb_pixel(fb: *mut pb_fb, x: c_int, y: c_int, color: pb_color);
    pub fn pb_fb_fill_shade(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        fg: pb_color,
        bg: pb_color,
        level: c_int,
    );

    /* blends & fills */
    pub fn pb_cell_blend(dst: pb_cell, src: pb_cell, alpha: c_float, mode: pb_blend_mode)
        -> pb_cell;
    pub fn pb_fb_put_blend(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        c: pb_cell,
        alpha: c_float,
        mode: pb_blend_mode,
    );
    pub fn pb_fb_blit_blend(
        dst: *mut pb_fb,
        dx: c_int,
        dy: c_int,
        src: *const pb_fb,
        alpha: c_float,
        mode: pb_blend_mode,
    );
    pub fn pb_fb_plot_blend(
        fb: *mut pb_fb,
        px: c_int,
        py: c_int,
        color: pb_color,
        alpha: c_float,
    );
    pub fn pb_fb_fill_gradient_v(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        top: pb_color,
        bottom: pb_color,
    );
    pub fn pb_fb_fill_gradient_h(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        left: pb_color,
        right: pb_color,
    );
    pub fn pb_fb_fill_dither(
        fb: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        a: pb_color,
        b: pb_color,
        pattern: c_int,
    );

    /* triangles */
    pub fn pb_fb_fill_triangle(
        fb: *mut pb_fb,
        x0: c_int,
        y0: c_int,
        x1: c_int,
        y1: c_int,
        x2: c_int,
        y2: c_int,
        c: pb_cell,
    );
    pub fn pb_fb_braille_fill_triangle(
        fb: *mut pb_fb,
        x0: c_int,
        y0: c_int,
        x1: c_int,
        y1: c_int,
        x2: c_int,
        y2: c_int,
        color: pb_color,
    );

    /* sprite sheets */
    pub fn pb_sheet_wrap(atlas: pb_fb, tile_w: c_int, tile_h: c_int) -> pb_sheet;
    pub fn pb_sheet_create(cols: c_int, rows: c_int, tile_w: c_int, tile_h: c_int) -> pb_sheet;
    pub fn pb_sheet_free(sheet: *mut pb_sheet);
    pub fn pb_sheet_set_tile(sheet: *mut pb_sheet, tile_id: c_int, src: *const pb_fb);
    pub fn pb_fb_blit_tile(
        dst: *mut pb_fb,
        dx: c_int,
        dy: c_int,
        sheet: *const pb_sheet,
        tile_id: c_int,
    );
    pub fn pb_fb_blit_tile_masked(
        dst: *mut pb_fb,
        dx: c_int,
        dy: c_int,
        sheet: *const pb_sheet,
        tile_id: c_int,
        transparent_ch: u32,
    );
    pub fn pb_fb_nine_slice(
        dst: *mut pb_fb,
        x: c_int,
        y: c_int,
        w: c_int,
        h: c_int,
        sheet: *const pb_sheet,
        tile_tl: c_int,
        tile_t: c_int,
        tile_tr: c_int,
        tile_l: c_int,
        tile_c: c_int,
        tile_r: c_int,
        tile_bl: c_int,
        tile_b: c_int,
        tile_br: c_int,
    );

    /* animation */
    pub fn pb_anim_reset(anim: *mut pb_anim);
    pub fn pb_anim_update(anim: *mut pb_anim, dt: c_double);
    pub fn pb_anim_frame(anim: *const pb_anim) -> c_int;

    /* particles */
    pub fn pb_particles_init(ps: *mut pb_particles, capacity: c_int) -> c_int;
    pub fn pb_particles_free(ps: *mut pb_particles);
    pub fn pb_particles_emit(
        ps: *mut pb_particles,
        x: c_float,
        y: c_float,
        vx: c_float,
        vy: c_float,
        life: c_float,
        color: pb_color,
    );
    pub fn pb_particles_update(ps: *mut pb_particles, dt: c_double);
    pub fn pb_particles_draw_braille(fb: *mut pb_fb, ps: *const pb_particles);
    pub fn pb_particles_draw_half(fb: *mut pb_fb, ps: *const pb_particles);

    /* FFI constructors / version */
    pub fn pb_rgb_ex(r: u8, g: u8, b: u8) -> pb_color;
    pub fn pb_cell_ex(ch: u32, fg: pb_color, bg: pb_color, style: u16) -> pb_cell;
    pub fn pb_fb_create(w: c_int, h: c_int) -> *mut pb_fb;
    pub fn pb_fb_destroy(fb: *mut pb_fb);
    pub fn pb_version_string() -> *const c_char;
    pub fn pb_version(major: *mut c_int, minor: *mut c_int, patch: *mut c_int);

    /* pb_app.h */
    pub fn pb_app_create(desc: *const pb_app_desc, user: *mut c_void) -> *mut pb_app;
    pub fn pb_app_destroy(app: *mut pb_app);
    pub fn pb_app_run(app: *mut pb_app) -> c_int;
    pub fn pb_app_quit(app: *mut pb_app);
    pub fn pb_app_request_resize(app: *mut pb_app);
    pub fn pb_app_width(app: *const pb_app) -> c_int;
    pub fn pb_app_height(app: *const pb_app) -> c_int;
    pub fn pb_app_set_title(app: *mut pb_app, title: *const c_char);
    pub fn pb_app_set_clear(app: *mut pb_app, clear: pb_cell);
    pub fn pb_app_set_target_fps(app: *mut pb_app, fps: c_int);
    pub fn pb_app_is_replay(app: *const pb_app) -> c_int;
    pub fn pb_app_is_recording(app: *const pb_app) -> c_int;
    pub fn pb_app_replay_seed(app: *const pb_app) -> u32;
    pub fn pb_app_replay_initial_size(
        app: *const pb_app,
        out_w: *mut c_int,
        out_h: *mut c_int,
    ) -> c_int;

    /* pb_state.h */
    pub fn pb_is_key_down(app: *const pb_app, key: pb_key) -> c_int;
    pub fn pb_is_key_pressed(app: *const pb_app, key: pb_key) -> c_int;
    pub fn pb_is_key_released(app: *const pb_app, key: pb_key) -> c_int;
    pub fn pb_is_char_down(app: *const pb_app, codepoint: u32) -> c_int;
    pub fn pb_is_char_pressed(app: *const pb_app, codepoint: u32) -> c_int;
    pub fn pb_get_mouse_x(app: *const pb_app) -> c_int;
    pub fn pb_get_mouse_y(app: *const pb_app) -> c_int;
    pub fn pb_is_mouse_button_down(app: *const pb_app, button: c_int) -> c_int;
    pub fn pb_is_mouse_button_pressed(app: *const pb_app, button: c_int) -> c_int;
    pub fn pb_is_mouse_button_released(app: *const pb_app, button: c_int) -> c_int;
    pub fn pb_get_mouse_wheel(app: *const pb_app) -> c_int;
    pub fn pb_get_frame_time(app: *const pb_app) -> c_double;
    pub fn pb_get_fps(app: *const pb_app) -> c_int;
    pub fn pb_is_focused(app: *const pb_app) -> c_int;
}
